Commit Fabren Kalorienrechner

--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -192,11 +192,11 @@
                       </div>
                       <div id="calc-target-maintain">
                           To Maintain:<br>
-                          <span>2400 calories</span>
+                          <span style="color:white">2400 calories</span>
                       </div>
                       <div id="calc-target-lose">
                           To Lose Weight:<br>
-                          <span>1900 calories</span>
+                          <span style="color:white">1900 calories</span>
                       </div>
                   </div>
               </div>
