--- a/templates/index.html
+++ b/templates/index.html
@@ -179,16 +179,16 @@
                   </div>
                   <div class="results">
                       <div id="calc-target-gain">
-                          To Gain Weight:<br>
+                          Zunehmen:<br>
                           <span style="color:white">2700 calories</span>
                       </div>
                       <div id="calc-target-maintain">
-                          To Maintain:<br>
-                          <span>2400 calories</span>
+                          Halten:<br>
+                          <span style="color:white">2400 calories</span>
                       </div>
                       <div id="calc-target-lose">
-                          To Lose Weight:<br>
-                          <span>1900 calories</span>
+                          Abnehmen:<br>
+                          <span style="color:white">1900 calories</span>
                       </div>
                   </div>
               </div>
@@ -305,48 +305,8 @@
                 <input id="email" name="email" type="email" placeholder="Your Email" class="tm-input" required />
                 <textarea id="message" name="message" rows="8" placeholder="Message" class="tm-input" required></textarea>                
                 <button type="submit" class="btn tm-btn-submit">Submit</button>
-              </form>
-              <!-- Erfolg Modal -->
-              <div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="successModalLabel">Erfolg</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body" id="successMessage">
-                      Nachricht gesendet!
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Fehler Modal -->
-              <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="errorModalLabel">Fehler</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body" id="errorMessage">
-                      Fehler beim Senden der Nachricht
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              </form> 
             </div>
-            
             <div class="col-sm-12 col-md-6">
 
                 <div class="contact-item">
@@ -355,7 +315,6 @@
                       <span class="mb-0">Whatsapp</span>
                   </a>
                 </div>
-                               
                 <div class="contact-item">
                   <a rel="nofollow" href="tel:0100200340" class="item-link">
                       <i class="fas fa-2x fa-phone-square mr-4"></i>
