--- a/static/css/tooplate-infinite-loop.css
+++ b/static/css/tooplate-infinite-loop.css
@@ -740,6 +740,11 @@ p {
 .results {
   margin-top: 0.5em;
   text-align: center;
+  background-color: rgba(255, 255, 255, 0.4);
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .results > div {
