--- a/static/css/tooplate-infinite-loop.css
+++ b/static/css/tooplate-infinite-loop.css
@@ -90,8 +90,8 @@ blockquote {
 }
 
 .navbar-brand {
-  color: white;
-  font-size: 1.4rem;
+  color: #D7ba89;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
