--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>SimFit</title>
+    <title>Pathera Coaching</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-5.5/css/all.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='slick/slick.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='slick/slick-theme.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='magnific-popup/magnific-popup.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/tooplate-infinite-loop.css') }}">
+    
     
 
   </head>
@@ -21,7 +22,7 @@
       <nav class="navbar navbar-expand-md tm-navbar" id="tmNav">
         <div class="container">
           <div class="tm-next">
-              <a href="#infinite" class="navbar-brand">S I M F I T</a>
+              <a href="#infinite" class="navbar-brand">Pathera Coaching</a>
           </div>
             
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,13 +52,17 @@
       
       <div class="text-center tm-hero-text-container">
         <div class="tm-hero-text-container-inner">
-          <hr style="background-color: white; height:2px; width:20%;">
-            <h2 class="tm-hero-title">S I M F I T</h2>
-            <hr style="background-color: white; height:2px; width:20%;">
-            <p class="tm-hero-subtitle">
-              Wetsh abneh?
-              <br>Ich zeig der wie!
-            </p>
+          <hr style="background-color: #D7ba89; height:2px; width:25%;">
+          <h2 class="tm-hero-title" style="font-size: 35px;">P A T H E R A</h2>
+          <div style="text-align: center;">
+              <hr style="background-color: #D7ba89; height:2px; width:7.5%; display: inline-block; margin: 0 10px;">
+              <span style="color: white; font-family: 'Courier New', monospace; font-size: 15px;">Coaching</span>
+              <hr style="background-color: #D7ba89; height:2px; width:7.5%; display: inline-block; margin: 0 10px;">
+          </div>
+          <p class="tm-hero-subtitle">
+            Wetsh abneh?
+            <br>Ich zeig der wie!
+          </p>
         </div>
       </div>
 
