--- a/templates/index.html
+++ b/templates/index.html
@@ -410,7 +410,7 @@
           <a rel="nofollow" href="https://www.tooplate.com" title="HTML templates"></a>
         </p>
       </footer>
-      <button type="submit" class="btn tm-btn-submit mx-auto d-block" style="width: 10%;" id="registrationSubmitButton">Senden</button>
+      <!--<button type="submit" class="btn tm-btn-submit mx-auto d-block" style="width: 10%;" id="registrationSubmitButton">Senden</button>-->
     </section>
     <script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/slick/slick.min.js') }}"></script>
