--- a/templates/index.html
+++ b/templates/index.html
@@ -387,7 +387,7 @@
             </div>
             <div class="contact-item">
               <div class="contaus">
-                <a rel="nofollow" href="https://api.whatsapp.com/send?phone=0765336444" class="item-link">
+                <a rel="nofollow" href="https://wa.me/41765336444" class="item-link">
                 <i class="far fa-2x fa-comment mr-4"></i>
                 <span class="mb-0">Whatsapp</span>
                 </a>
