--- a/templates/index.html
+++ b/templates/index.html
@@ -374,8 +374,8 @@
                 <textarea type="text" id="textField11" name="textField11" rows="8" class="tm-input" required style="margin-left: 40px;"></textarea>
                 <select id="vielesseroderwenigesser" name="vielesseroderwenigesser" class="tm-input" required style="background-color: transparent; margin-left: 40px;">
                   <option value="" style="display: none;">Essverhalten</option>
-                  <option value="Abnehmen">Vielesser</option>
-                  <option value="Zunehmen">Wenigesser</option>
+                  <option value="Vielesser">Vielesser</option>
+                  <option value="Wenigesser">Wenigesser</option>
                 </select>
                 <label for="textField12" style="margin-left: 40px;">Aktuelle Ernährungsgewohnheiten</label>
                 <textarea type="text" id="textField12" name="textField12" rows="8" class="tm-input" placeholder="Grobe Auflistung oder Beispiel" required style="margin-left: 40px;"></textarea>
